# F4MPClient

./: .gitignore  CMakeLists.txt  README.md
client/: xmake.lua
client/src/: main.c  test.c  test.h
common/: CMakeLists.txt
common/include/: Exceptions.h  GamePtr.h  Hook.h  Types.h  Utilities.h
common/src/: GamePtr.cpp
include/F4MPReverse/: Exceptions.h  Hook.h  Utilities.h
include/sciter/: sciter-x-host-callback.h
include/spdlog/fmt/bundled/: format.h
lib/: F4MPReverse.lib  PolyHook_2.lib  detours.lib
libs/hooks/: CMakeLists.txt
libs/hooks/include/: Hooks.h
libs/imgui/: CMakeLists.txt
libs/imgui/src/: imgui_internal.h
libs/steam/: CMakeLists.txt
libs/steamnetwork/: CMakeLists.txt
source/: xmake.lua
source/src/client/: main.c
src/: DXGI.h  Direct3D11.cpp  DirectXHook.cpp  DirectXHook.h  Exceptions.h  Game.cpp  Game.h  Global.h  Logger.h  Renderer.cpp  Renderer.h  main.cpp
src/Hooks/: Direct3D11.cpp  Direct3D11.h  Direct3DBase.h  Window.cpp  Window.h
src/Utils/: FunctionCalling.h  Helpers.h  Hook.h  VMTHook.h  Write.h
